--- a/hex-jax-rs-ext/pom.xml
+++ b/hex-jax-rs-ext/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nu.hex</groupId>
     <artifactId>hex-jax-rs-ext</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
